--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LoopStudios - Milenko Stankovic</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" href="img/favicon-32x32.png">
+
+    <title>LoopStudios - Milenko Stanković</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -12,10 +17,233 @@
   <body>
 
 
+    <div class="container">
+      <div class="row">
+        <!-- Main Header -->
+        <header class="main-header">
+          <div class="row">
+            <!-- Navigation -->
+            <div class="nav-menu">
+              <div class="row">
+              <!-- Logo img -->
+                <div class="logo">
+                  <a href="index.html">
+                    <img class="img-fluid" src="img/logo.svg" alt="Logo">
+                  </a>
+                </div>
+                <!-- Logo img END -->
+
+                <!-- Nav -->
+                <div class="menu">
+
+                </div>
+              <!-- Nav END -->
+              </div>
+            </div>
+            <!-- Navigation END -->
+
+            <!-- Immersive text -->
+            <div class="immersive-text">
+              <h1>Immersive experiences that <br> deliver</h1>
+            </div>
+            <!-- Immersive text -->
+          </div>
+        </header>
+        <!-- Main Header END -->
+
+
+
+      <!-- Main -->
+      <main class="mainDiv">
+        <div class="row">
+          <!-- Main Article -->
+          <div class="mainArticleDiv">
+            <a href="#"><img class="img-fluid" src="img/mobile/image-interactive.jpg" alt="Img Interactive"></a>
+
+            <a href="#"><h2>The leader in interactive vr</h2></a>
+
+            <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to ther brand.</p>
+          </div>
+          <!-- Main Article END -->
+
+          <!-- Our Creations -->
+          <div class="ourCreationsDiv">
+            <div class="row">
+              <!-- Our creation.. TEXT -->
+              <a href="#">
+                <div class="ourCreationsTxt creationsDivs">
+                  <h3>Our creations</h3>
+                </div>
+              </a>
+              <!-- Our creation.. TEXT -->
+
+              <!-- Deep Earth -->
+              <a href="#">
+                <div class="deepEarth creationsDivs">
+                  <p>Deep <br> earth</p>
+                </div>
+              </a>
+              <!-- Deep Earth END -->
+
+              <!-- Night Arcade -->
+              <a href="#">
+                <div class="nightArcade creationsDivs">
+                  <p>Night <br> arcade</p>
+                </div>
+              </a>
+              <!-- Night Arcade END -->
+
+              <!-- Soccer Team Vr -->
+              <a href="#">
+                <div class="soccerTeamVr creationsDivs">
+                  <p>Soccer <br> team vr</p>
+                </div>
+              </a>
+              <!-- Soccer Team Vr END -->
+
+              <!-- The Grid -->
+              <a href="#">
+                <div class="theGrid creationsDivs">
+                  <p>The <br> grid</p>
+                </div>
+              </a>
+              <!-- The Grid END -->
+
+              <!-- From Up Above Vr -->
+              <a href="#">
+                <div class="frompUpAboveVr creationsDivs">
+                  <p>From up <br> above vr</p>
+                </div>
+              </a>
+              <!-- From Up Above Vr END -->
+
+              <!-- Pocket Borealis -->
+              <a href="#">
+                <div class="pocketBorealis creationsDivs">
+                  <p>Pocket <br> borealis</p>
+                </div>
+              </a>
+              <!-- Pocket Borealis END -->
+
+              <!-- The Curiosity -->
+              <a href="#">
+                <div class="theCuriosity creationsDivs">
+                  <p>The <br> curiosity</p>
+                </div>
+              </a>
+              <!-- The Curiosity END -->
+
+              <!-- Make it Fisheye -->
+              <a href="#">
+                <div class="makeItFisheye creationsDivs">
+                  <p>Make it <br> fisheye</p>
+                </div>
+              </a>
+              <!-- Make it Fisheye END -->
+
+              <!-- See All -->
+              <button>See all</button>
+              <!-- See All END -->
+            </div>
+          </div>
+          <!-- Our Creations END -->
+        </div>
+      </main>
+      <!-- Main END -->
+
+
+
+      <!-- Main Footer -->
+      <footer class="main-footer text-center">
+        <div class="row">
+          <!-- Logo Footer -->
+          <div class="logoFooter">
+            <a href="index.html">
+              <img class="img-fluid" src="img/logo.svg" alt="Logo footer">
+            </a>
+          </div>
+          <!-- Logo Footer END -->
+
+
+
+          <!-- Nav Footer -->
+          <div class="navFooter">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Careers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Support</a>
+              </li>
+            </ul>
+          </div>
+          <!-- Nav Footer END -->
+
+
+          <!-- Soc-Net icons -->
+          <div class="socNetIcons">
+            <ul class="nav justify-content-center">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">
+                  <img src="img/icon-facebook.svg" alt="Facebook">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img src="img/icon-twitter.svg" alt="Twitter">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img src="img/icon-pinterest.svg" alt="Pinterest">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <img src="img/icon-instagram.svg" alt="Instagram">
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- Soc-Net icons END -->
+
+
+
+          <!-- Footer text -->
+          <h4>&copy; 2021 Loopstudios. All rights reserved.</h4>
+          <!-- Footer text END -->
+
+          <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+            <br>
+            Coded by <a href="#">Milenko Stanković</a>
+          </div>
+        </div>
+      </footer>
+      <!-- Main Footer END -->
+      </div>
+    </div>
+
+
+
+
+
 
 
 
     <!-- JS -->
     <script src="js/main.js"></script>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
