--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="main-header">
           <div class="row">
             <!-- Navigation -->
-            <div class="nav-menu">
+            <nav class="nav-menu">
               <div class="row">
               <!-- Logo img -->
                 <div class="logo">
@@ -34,12 +34,59 @@
                 <!-- Logo img END -->
 
                 <!-- Nav -->
-                <div class="menu">
-
+                <div class="hamburger-menu">
+                  <img id="ham-menu" src="img/icon-hamburger.svg" alt="Hamburger icon">
                 </div>
-              <!-- Nav END -->
+                <!-- Mobile Menu -->
+                <div class="mobile-menu">
+                  <div class="row">
+                    <!-- Mobile Menu Logo -->
+                    <div class="logo">
+                      <a href="index.html">
+                        <img class="img-fluid" src="img/logo.svg" alt="Logo">
+                      </a>
+                    </div>
+                    <!-- Mobile Menu Logo END -->
+
+                    <div class="mobile-nav">
+                      <ul class="mobile-ul">
+                        <li class="mobile-li"><a href="#">About</a></li>
+                        <li class="mobile-li"><a href="#">Careers</a></li>
+                        <li class="mobile-li"><a href="#">Events</a></li>
+                        <li class="mobile-li"><a href="#">Products</a></li>
+                        <li class="mobile-li"><a href="#">Support</a></li>
+                      </ul>
+                    </div>
+
+                    <div class="icon-close">
+                      <img src="img/icon-close.svg" alt="Close icon">
+                    </div>
+
+                  </div>
+                </div>
+                <!-- Mobile Menu -->
+
+
+                <ul class="nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Careers</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Events</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">Products</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">Support</a>
+                  </li>
+                </ul>
+                <!-- Nav END -->
               </div>
-            </div>
+            </nav>
             <!-- Navigation END -->
 
             <!-- Immersive text -->
