Ostalo footer desktop i active da se zavrsi

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <!-- Main Header -->
         <header class="main-header">
@@ -115,83 +115,81 @@
 
           <!-- Our Creations -->
           <div class="ourCreationsDiv">
-            <div class="row">
               <!-- Our creation.. TEXT -->
-              <a href="#">
                 <div class="ourCreationsTxt creationsDivs">
-                  <h3>Our creations</h3>
+                  <a href="#">
+                    <h3>Our creations</h3>
+                  </a>
                 </div>
-              </a>
               <!-- Our creation.. TEXT -->
 
               <!-- Deep Earth -->
-              <a href="#">
                 <div class="deepEarth creationsDivs">
-                  <p>Deep <br> earth</p>
+                  <a href="#">
+                    <p>Deep <br> earth</p>
+                  </a>
                 </div>
-              </a>
               <!-- Deep Earth END -->
 
               <!-- Night Arcade -->
-              <a href="#">
                 <div class="nightArcade creationsDivs">
-                  <p>Night <br> arcade</p>
+                  <a href="#">
+                    <p>Night <br> arcade</p>
+                  </a>
                 </div>
-              </a>
               <!-- Night Arcade END -->
 
               <!-- Soccer Team Vr -->
-              <a href="#">
                 <div class="soccerTeamVr creationsDivs">
-                  <p>Soccer <br> team vr</p>
+                  <a href="#">
+                    <p>Soccer <br> team vr</p>
+                  </a>
                 </div>
-              </a>
               <!-- Soccer Team Vr END -->
 
               <!-- The Grid -->
-              <a href="#">
                 <div class="theGrid creationsDivs">
-                  <p>The <br> grid</p>
+                  <a href="#">
+                    <p>The <br> grid</p>
+                  </a>
                 </div>
-              </a>
               <!-- The Grid END -->
 
               <!-- From Up Above Vr -->
-              <a href="#">
                 <div class="frompUpAboveVr creationsDivs">
-                  <p>From up <br> above vr</p>
+                  <a href="#">
+                    <p>From up <br> above vr</p>
+                  </a>
                 </div>
-              </a>
               <!-- From Up Above Vr END -->
 
               <!-- Pocket Borealis -->
-              <a href="#">
                 <div class="pocketBorealis creationsDivs">
-                  <p>Pocket <br> borealis</p>
+                  <a href="#">
+                    <p>Pocket <br> borealis</p>
+                  </a>
                 </div>
-              </a>
               <!-- Pocket Borealis END -->
 
               <!-- The Curiosity -->
-              <a href="#">
                 <div class="theCuriosity creationsDivs">
-                  <p>The <br> curiosity</p>
+                  <a href="#">
+                    <p>The <br> curiosity</p>
+                  </a>
                 </div>
-              </a>
               <!-- The Curiosity END -->
 
               <!-- Make it Fisheye -->
-              <a href="#">
                 <div class="makeItFisheye creationsDivs">
-                  <p>Make it <br> fisheye</p>
+                  <a href="#">
+                    <p>Make it <br> fisheye</p>
+                  </a>
                 </div>
-              </a>
               <!-- Make it Fisheye END -->
 
               <!-- See All -->
               <button>See all</button>
               <!-- See All END -->
-            </div>
           </div>
           <!-- Our Creations END -->
         </div>
