Zavrsen projekat loopstudios

--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
           <div class="mainArticleDiv">
             <a href="#"><img class="img-fluid" src="img/mobile/image-interactive.jpg" alt="Img Interactive"></a>
 
-            <a href="#"><h2>The leader in interactive vr</h2></a>
+            <div class="mainArticleTxt">
+              <a href="#"><h2>The leader in interactive vr</h2></a>
 
-            <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to ther brand.</p>
+              <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to ther brand.</p>
+            </div>
           </div>
           <!-- Main Article END -->
 
@@ -117,9 +119,7 @@
           <div class="ourCreationsDiv">
               <!-- Our creation.. TEXT -->
                 <div class="ourCreationsTxt creationsDivs">
-                  <a href="#">
                     <h3>Our creations</h3>
-                  </a>
                 </div>
               <!-- Our creation.. TEXT -->
 
